bin/debug/log.txt
In module 'anonymous' imported from main.cpp:1:
In module 'anonymous.basic' imported from /Users/anonymous/Code/anonymous/include/anonymous/module.cppm:2:
[1m/Users/anonymous/Code/anonymous/include/anonymous/basic/common/algo.hpp:4:21: [0m[0;1;31merror: [0m[1mstatic assertion failed due to requirement '(1 > 0 && 1 < 0) || (1 < 0 && 1 > 0)': invalid for-clause[0m
    4 |     static_assert ( ( stride > 0 and min < max ) or[0m
      | [0;1;32m                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[0m    5 |                     ( stride < 0 and min > max ),[0m
      | [0;1;32m                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[0m[1m/Users/anonymous/Code/anonymous/include/anonymous/basic/common/print.cpp:5:9: [0m[0;1;36mnote: [0min instantiation of function template specialization 'anonymous::for_constexpr<1, 0, 1, (lambda at /Users/anonymous/Code/anonymous/include/anonymous/basic/common/print.cpp:5:44)>' requested here[0m
    5 |         for_constexpr<1,sizeof...(args)-1>([&] <int index> { std::cout << index_value_of<index>(args...) << ' '; });[0m
      | [0;1;32m        ^
[0m[1mmain.cpp:24:10: [0m[0;1;36mnote: [0min instantiation of function template specialization 'anonymous::print_t::operator()<unsigned long>' requested here[0m
   24 |     print(mds.rank());[0m
      | [0;1;32m         ^
[0m1 error generated.
